--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
         <div class="mensaje-largo">
             <h2>Mi amor...</h2>
             <p>
-                Ha pasado ya un mes desde aquella noche en Barbarella, en la que después de un <br>
-                "una coliflor" y un "para que sepa rico" te pedí que fueras mi novia. Justo hoy hace <br>
-                1 mes sucedió aquella noche. <br>
-                Recuerdo como si fuera ayer aquel 25 de febrero el "me debes una salida en moto", y no <br>
-                paro de pensar en que fue la mejor decisión de mi vida mandarte aquel mensaje, fué el <br>
-                inicio de algo maravilloso. <br>
-                Desde aquel 28 de Marzo en que te pedí que fueras mi novia han pasado muchas cosas tan lindas, <br>
-                nos hemos divertido muchisimo y creado muchos recuerdos hermosos, todos y cada uno los <br>
-                recuerdo con una gran sonrisa en mi rostro. <br>
+                Ha pasado ya un mes desde aquella noche en Barbarella, en la que después de un
+                "una coliflor" y un "para que sepa rico" te pedí que fueras mi novia. Justo hoy hace
+                1 mes sucedió aquella noche.
+            </p>
+            <p>
+                Recuerdo como si fuera ayer aquel 25 de febrero el "me debes una salida en moto", y no
+                paro de pensar en que fue la mejor decisión de mi vida mandarte aquel mensaje, fué el
+                inicio de algo maravilloso.
+                Desde aquel 28 de Marzo en que te pedí que fueras mi novia han pasado muchas cosas tan lindas,
+                nos hemos divertido muchisimo y creado muchos recuerdos hermosos, todos y cada uno los
+                recuerdo con una gran sonrisa en mi rostro.
             </p>
             <p>
                 Sin lugar a dudas me siento muy feliz y emocionado por lo que se acerca para nosotros, <br>
