--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
             <div class="swiper-wrapper">
                 <!-- Fotos -->
                 <div class="swiper-slide"><img src="images/img1.jpg" alt="Foto 1"></div>
-                <div class="swiper-slide"><img src="images/img2.jpg" alt="Foto 2"></div>
-                <div class="swiper-slide"><img src="images/img3.jpg" alt="Foto 3"></div>
-                <div class="swiper-slide"><img src="images/img4.jpg" alt="Foto 1"></div>
-                <div class="swiper-slide"><img src="images/img5.jpg" alt="Foto 2"></div>
-                <div class="swiper-slide"><img src="images/img6.jpg" alt="Foto 3"></div>
-                <div class="swiper-slide"><img src="images/img7.jpg" alt="Foto 1"></div>
-                <div class="swiper-slide"><img src="images/img8.jpg" alt="Foto 2"></div>
-                <div class="swiper-slide"><img src="images/img9.jpg" alt="Foto 3"></div>
-                <div class="swiper-slide"><img src="images/img10.jpg" alt="Foto 1"></div>
-                <div class="swiper-slide"><img src="images/img11.jpg" alt="Foto 2"></div>
-                <div class="swiper-slide"><img src="images/img12.jpg" alt="Foto 3"></div>
-                <div class="swiper-slide"><img src="images/img13.jpg" alt="Foto 1"></div>
-                <div class="swiper-slide"><img src="images/img14.jpg" alt="Foto 2"></div>
-                <div class="swiper-slide"><img src="images/img15.jpg" alt="Foto 3"></div>
-                <div class="swiper-slide"><img src="images/img16.jpg" alt="Foto 3"></div>
+                <div class="swiper-slide"><img src="images/img2.JPG" alt="Foto 2"></div>
+                <div class="swiper-slide"><img src="images/img3.JPG" alt="Foto 3"></div>
+                <div class="swiper-slide"><img src="images/img4.JPG" alt="Foto 1"></div>
+                <div class="swiper-slide"><img src="images/img5.JPG" alt="Foto 2"></div>
+                <div class="swiper-slide"><img src="images/img6.JGP" alt="Foto 3"></div>
+                <div class="swiper-slide"><img src="images/img7.JPG" alt="Foto 1"></div>
+                <div class="swiper-slide"><img src="images/img8.JPG" alt="Foto 2"></div>
+                <div class="swiper-slide"><img src="images/img9.JPG" alt="Foto 3"></div>
+                <div class="swiper-slide"><img src="images/img10.JPG" alt="Foto 1"></div>
+                <div class="swiper-slide"><img src="images/img11.JPG" alt="Foto 2"></div>
+                <div class="swiper-slide"><img src="images/img12.JPG" alt="Foto 3"></div>
+                <div class="swiper-slide"><img src="images/img13.JPG" alt="Foto 1"></div>
+                <div class="swiper-slide"><img src="images/img14.JPG" alt="Foto 2"></div>
+                <div class="swiper-slide"><img src="images/img15.JPG" alt="Foto 3"></div>
+                <div class="swiper-slide"><img src="images/img16.JPG" alt="Foto 3"></div>
 
             </div>
         </div>
