--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="swiper-slide"><img src="images/img3.JPG" alt="Foto 3"></div>
                 <div class="swiper-slide"><img src="images/img4.JPG" alt="Foto 1"></div>
                 <div class="swiper-slide"><img src="images/img5.JPG" alt="Foto 2"></div>
-                <div class="swiper-slide"><img src="images/img6.JGP" alt="Foto 3"></div>
+                <div class="swiper-slide"><img src="images/img6.JPG" alt="Foto 3"></div>
                 <div class="swiper-slide"><img src="images/img7.JPG" alt="Foto 1"></div>
                 <div class="swiper-slide"><img src="images/img8.JPG" alt="Foto 2"></div>
                 <div class="swiper-slide"><img src="images/img9.JPG" alt="Foto 3"></div>
