--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="swiper-slide"><img src="images/img13.JPG" alt="Foto 1"></div>
                 <div class="swiper-slide"><img src="images/img14.JPG" alt="Foto 2"></div>
                 <div class="swiper-slide"><img src="images/img15.JPG" alt="Foto 3"></div>
-                <div class="swiper-slide"><img src="images/img16.JPG" alt="Foto 3"></div>
+                <div class="swiper-slide"><img src="images/img16.jpg" alt="Foto 3"></div>
 
             </div>
         </div>
